[project]
name = "aetheria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.1",
    "openai>=2.9.0",
    "tqdm>=4.67.1",
]
